# phi3-spectral-instability

./: .gitignore  .gitmodules  CLAUDE.md  GPU_RUNBOOK.md  Justfile  README.md  RUNPOD.md  SETUP.md  profile_bins.py  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
cache/01/016e0df6dbab60caf84db456205ad946a2d5cfeb92ee416b330de9b23ac78f94/: F_summary.header.json  F_summary.npy  event.json
cache/01/017366853720b3102f1ee326b9a467ef9e62f07777acd88fb6aeed8583455ea6/: F_summary.header.json  F_summary.npy  event.json
cache/01/019406049712a974ef7935c78a1bb85403172cd03d9783a2153c71543424955e/: F_summary.header.json  F_summary.npy  event.json
cache/02/0248fa0f3785cbf5b1f1e03257ec24b5baf186353b207612364c00ea5e8be6cd/: F_summary.header.json  F_summary.npy  event.json
cache/02/02ae77452d9f0f9a69d0e2b31e02fa27e1e6a1620f6f85ff8697ee0fd4721321/: F_summary.header.json  F_summary.npy  event.json
cache/03/033fae18842bc57ca6581d4e585e9d61c20480a003d6673e70336c93235903ae/: F_summary.header.json  F_summary.npy  event.json
cache/03/0344865f026c1c8ea5387cf1c892821a3776d4b2350c5bbed83614999cdcc23b/: F_summary.header.json  F_summary.npy  event.json
cache/03/03830b3c6b21935bb51ec5b6d5db5f0c36620b175a40c8f128ea8f427ff65ed6/: F_summary.header.json  F_summary.npy  event.json
cache/03/03b893d49bfad7881b859338ffd6f719478a7e76d906b4d96987bc6417aa43fd/: F_summary.header.json  F_summary.npy  event.json
cache/03/03de963793e5706c11fbf53e9fa0f78f75c50a458baabdc0d4dd5fe0988e2122/: F_summary.header.json  F_summary.npy  event.json
cache/04/040e7cf67e2148f2aa097ce05017bda6131527c27b73098a086c7ebf9120e1c4/: F_summary.header.json  F_summary.npy  event.json
cache/04/04177096d4c7737651a9090781c747466cc251f8de410fcdf24225bbef4591e4/: F_summary.header.json  F_summary.npy  event.json
cache/04/041cb6995b8b937920acbd9545d7bc96426dc0d2ad2fe86c641106d7d118b332/: F_summary.header.json  F_summary.npy  event.json
cache/04/04d6f94908f10abda4df739b6698e81a2867af981f9a33024737aa13b0428e0d/: F_summary.header.json  F_summary.npy  event.json
docs/: bot-stats.md  design.md  licenses.md  progression.md  session-log.md  telemetry.md  waypointing.md
docs/adr/: 0000-template.md  0001-engine-fork-fteqw.md  0002-host-app-tauri.md  0003-navigation-generation.md  0004-procedural-map-generation.md
experiment_artifacts/: progress.json
exploratory/: README.md
mapgen/: pyproject.toml
mapgen/idledoom_mapgen/: __init__.py  cli.py  entities.py  generate.py  geometry.py  layout.py  mapfile.py  model.py  params.py  verify.py
mapgen/tests/: test_batch.py  test_determinism.py  test_verify.py
quakec/: INTEGRATION.md  client.qc  combat.qc  defs.qc  items.qc  progs.src  telemetry.qc  triggers.qc  weapons.qc  world.qc
quakec/frikbot/: bot.qc  bot_ai.qc  bot_ed.qc  bot_fight.qc  bot_move.qc  bot_phys.qc  bot_way.qc
reports/: crossbar_signal.json  null_evidence.json  per_layer_analysis.json  stat_scan.json
reports/pilot/: cem_yield.json  confound_audit.json  distance_diagnostic.json  handcheck_sample.jsonl  pooled_auroc.json  runtime.json
scripts/: analyze_per_layer.py  crossbar_signal.py  fit_layer_selected.py  mapgen_compile.sh  nonlinear_fit.py  null_evidence.py  regenerate_dataset.sh  replicate_to_s3.sh  run_full_study.sh  run_pilot.sh  run_pilot_resilient.sh  setup_do_droplet.sh  stat_scan.py
sims/: README.md  harness.py  pyproject.toml  rawrun.py
sims/configs/: current.toml  gen.toml  motion.toml  nav.toml  nav2.toml  smoke.toml
sims/idledoom_sim/: __init__.py  analyze.py  botstats.py  config.py  launcher.py  outcome.py  telemetry.py  traversal.py  writer.py
sims/schema/: event.schema.json  summary.schema.json
sims/tests/: test_analyze.py  test_clamp.py  test_coverage.py  test_nav_competence.py  test_no_softlock.py  test_outcome.py  test_parse.py  test_reconcile.py  test_schema.py  test_smoke.py  test_traversal.py
specs/001-headless-sim-telemetry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phi3-attention-geometry-v1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auto-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sp0-extraction-substrate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-procedural-maps/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/phi3geom/: __init__.py  checkpointing.py
tests/: conftest.py
tests/contract/: conftest.py  test_bundle_cache.py  test_event_alignment.py  test_manifest_completeness.py  test_resume_bundle.py  test_skfda_fpca_shape.py  test_skfda_func_logistic.py  test_sklearn_logistic.py
tests/integration/: conftest.py  test_capture_pipeline_v2.py  test_capture_roundtrip.py  test_gpu_reductions_equivalence.py  test_pilot_pipeline.py  test_selective_attention_equivalence.py
tests/unit/: conftest.py  test_abstention.py  test_abstention_validation.py  test_adapters_descriptor.py  test_adversariality_policies.py  test_atomic_unit_assembly.py  test_balance.py  test_cache.py  test_cem_oversample_escalation.py  test_changepoint.py  test_checkpointing.py  test_corpus_adapters_contract.py  test_crossbar.py  test_diagnostic_bin.py  test_event_metadata_cache.py  test_event_record.py  test_evidence_distance.py  test_evidence_distance_measure.py  test_generation.py  test_gqa_expansion.py  test_harness_advanced.py  test_harness_loader.py  test_harness_stats.py  test_hooks.py  test_hotpotqa_adapter.py  test_interhead.py  test_kattn_sweep.py  test_labeling.py  test_manifest.py  test_matching.py  test_mp_fit_analytic.py  test_normalization.py  test_pilot_adversariality.py  test_pilot_reports_pooled.py  test_pin_model_revision.py  test_pooled_detector.py  test_pooled_negative_control.py  test_principle_iii_segregation.py  test_ricci_integration.py  test_ricci_parity.py  (+4 more)
(+1526 files in other folders)
