[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi3geom"
version = "0.1.0"
description = "Phi-3 attention-geometry as a leading indicator of DocQA failures (v1 study)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Parker Williams", email = "parker.williams@gmail.com" }]
keywords = [
  "mechanistic-interpretability",
  "phi-3",
  "attention-geometry",
  "spectral-instability",
  "forman-ricci",
  "functional-data-analysis",
]

# Runtime dependencies. Versions chosen for plan.md compatibility:
#   - torch>=2.3 for Phi3Attention forward hooks
#   - transformers>=4.45 for stable Phi3Attention API
#   - skfda over FDApy for FPCA + functional logistic (research.md §3)
#   - GraphRicciCurvature as Forman-Ricci parity oracle (research.md §4)
dependencies = [
  "torch>=2.3",
  "transformers>=4.45",
  "huggingface_hub>=0.24",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "skfda>=0.9",
  "GraphRicciCurvature>=0.5",
  "networkx>=3.2",
  "pandas>=2.1",
]

[project.optional-dependencies]
# Development extras — TDD scope (Constitution Principle II) requires pytest +
# hypothesis. DCSBM reference repo is pinned by commit SHA so parity tests
# are reproducible across machines (Constitution Principle I).
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
  # DCSBM reference implementation — parity oracle for spectral primitives.
  # Pinned to commit c06a4f8 (main HEAD at 2026-05-19).
  "dcsbm-transformer @ git+https://github.com/ParkerWilliams/dcsbm-transformer.git@c06a4f848a0d26d9c5d1ab5a57bf13207e5cfd14",
]

[project.scripts]
pin-model-revision = "phi3geom.scripts.pin_model_revision:main"
run-pilot = "phi3geom.scripts.pilot_main:main"
run-full-study = "phi3geom.scripts.full_study_main:main"
regenerate-dataset = "phi3geom.scripts.regenerate_dataset:main"
check-hf-auth = "phi3geom.scripts.check_hf_auth:main"
run-analysis = "phi3geom.scripts.run_analysis:main"

[project.urls]
Repository = "https://github.com/ParkerWilliams/phi3-spectral-instability"
"DCSBM Prior Work" = "https://parkerwilliams.org/rambling/2026/3/21/spectral-instability-in-attention-matrices-as-a-leading-indicator-of-transformer-rule-violations"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest + hypothesis
# Constitution Principle II requires 100 seeded random inputs per parity test.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
  "gpu: requires a CUDA-capable GPU and Phi-3 weights (skipped by default)",
  "parity: parity test vs DCSBM reference; needs dcsbm-transformer installed",
  "slow: tests that take >10s; deselect with '-m \"not slow\"'",
]
filterwarnings = [
  "error::DeprecationWarning:phi3geom",
]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]

[tool.pytest_hypothesis]
profile = "default"

# ---------------------------------------------------------------------------
# ruff (lint + format)
# Constitution: <100 chars per line ideally; trailing whitespace forbidden.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line-too-long handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test names may use non-snake_case for clarity

# ---------------------------------------------------------------------------
# mypy (type checking)
# Strict mode for src/; lenient for tests/ and exploratory/.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party libraries without complete stubs.
module = [
  "skfda.*",
  "GraphRicciCurvature.*",
  "dcsbm_transformer.*",
  "transformers.*",
]
ignore_missing_imports = true
