[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi3geom"
version = "0.1.0"
description = "Phi-3 attention-geometry as a leading indicator of DocQA failures (v1 study)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Parker Williams", email = "parker.williams@gmail.com" }]
keywords = [
  "mechanistic-interpretability",
  "phi-3",
  "attention-geometry",
  "spectral-instability",
  "forman-ricci",
  "functional-data-analysis",
]

# Runtime dependencies. Versions chosen for plan.md compatibility:
#   - torch>=2.3 for Phi3Attention forward hooks
#   - transformers>=4.45 for stable Phi3Attention API
#   - GraphRicciCurvature as Forman-Ricci parity oracle (research.md §4)
# NOTE: research.md §3 named scikit-fda as the FPCA backend, but the v1
# implementation (src/phi3geom/analysis/fda.py) computes FPCA directly via
# numpy SVD + scikit-learn LogisticRegression and does NOT import it. It is
# therefore intentionally absent from this list. To swap in basis-fitting
# FPCA later, add "scikit-fda>=0.9" here (the PyPI distribution name; the
# import name is `skfda`).
dependencies = [
  "torch>=2.3",
  # Pinned to the 4.x line: the extraction hooks, output_attentions=True,
  # attn_implementation="eager", and the generate(...) call target the 4.x
  # Phi3Attention API. transformers 5.x is a major release with breaking
  # changes that this code has NOT been validated against — do not bump
  # past 5.0 without re-verifying the hooks on real Phi-3.
  # v2/SP-0: floor raised to >=4.48 — research.md R1.6 found the 4.48 attention
  # refactor moves RoPE placement + decoder-layer return arity, so the
  # multi-model capture study must NOT span it. The collection run pins ONE
  # exact version (e.g. ==4.53.*); this floor keeps the package installable.
  "transformers>=4.48,<5.0",
  # accelerate is required by transformers' from_pretrained(device_map="auto")
  # used in the pilot/full-study drivers and the integration test.
  "accelerate>=0.26",
  # huggingface_hub <1.0 to match the 4.x transformers line and the
  # whoami/model_info/HfApi surface used by check_hf_auth + pin_model_revision.
  "huggingface_hub>=0.24,<1.0",
  # hf_transfer: when RunPod (or any HF-friendly image) sets
  # HF_HUB_ENABLE_HF_TRANSFER=1, huggingface_hub REQUIRES this package or
  # downloads fail with a noisy ValueError. Cheap install, optional behavior,
  # avoids a paper cut on fresh pods.
  "hf_transfer>=0.1",
  # HuggingFace `datasets` for loading HotpotQA (and any other open-source
  # DocQA corpus we add). The 2026-06-04 pilot showed the synthetic corpus
  # produces a ~0.25% Phi-3 failure rate, too low to fit the v2.0.0 pooled
  # detector; HotpotQA's documented ~30-40% EM gives us a real natural
  # failure rate.
  "datasets>=2.18,<4.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "GraphRicciCurvature>=0.5",
  "networkx>=3.2",
  "pandas>=2.1",
]

[project.optional-dependencies]
# Development extras — TDD scope (Constitution Principle II) requires pytest +
# hypothesis. Spectral/Ricci primitives are verified by analytic property
# tests (closed-form values), not by cross-implementation parity against the
# prior DCSBM exploratory code (which was a research-direction scaffold, not a
# ground-truth oracle — see constitution v1.0.1 amendment).
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
pin-model-revision = "phi3geom.scripts.pin_model_revision:main"
run-pilot = "phi3geom.scripts.pilot_main:main"
run-full-study = "phi3geom.scripts.full_study_main:main"
regenerate-dataset = "phi3geom.scripts.regenerate_dataset:main"
check-hf-auth = "phi3geom.scripts.check_hf_auth:main"
run-analysis = "phi3geom.scripts.run_analysis:main"

[project.urls]
Repository = "https://github.com/ParkerWilliams/phi3-spectral-instability"
"DCSBM Prior Work" = "https://parkerwilliams.org/rambling/2026/3/21/spectral-instability-in-attention-matrices-as-a-leading-indicator-of-transformer-rule-violations"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest + hypothesis
# Constitution Principle II requires 100 seeded random inputs per parity test.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
  "gpu: requires a CUDA-capable GPU and Phi-3 weights (skipped by default)",
  "parity: parity test vs DCSBM reference; needs dcsbm-transformer installed",
  "slow: tests that take >10s; deselect with '-m \"not slow\"'",
]
filterwarnings = [
  "error::DeprecationWarning:phi3geom",
]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]

[tool.pytest_hypothesis]
profile = "default"

# ---------------------------------------------------------------------------
# ruff (lint + format)
# Constitution: <100 chars per line ideally; trailing whitespace forbidden.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line-too-long handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test names may use non-snake_case for clarity

# ---------------------------------------------------------------------------
# mypy (type checking)
# Strict mode for src/; lenient for tests/ and exploratory/.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party libraries without complete stubs.
module = [
  "skfda.*",
  "GraphRicciCurvature.*",
  "dcsbm_transformer.*",
  "transformers.*",
]
ignore_missing_imports = true
