[project]
name = "idledoom-mapgen"
version = "0.1.0"
description = "Seeded procedural Quake .map generator for idledoom (feature 004-procedural-maps)"
requires-python = ">=3.11"
dependencies = []

# Not an installable package — a script-style project. uv manages the venv and
# deps; `idledoom_mapgen` is imported via pythonpath (see [tool.pytest.ini_options]
# and `uv run` from the mapgen/ directory). The generator uses the standard
# library only; pytest/ruff/mypy are dev-only.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["idledoom_mapgen", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
