[project]
name = "idledoom-sim"
version = "0.1.0"
description = "Headless simulation harness + telemetry for idledoom (feature 001-headless-sim-telemetry)"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
]

# Not an installable package — a script-style project. uv manages the venv and
# deps; `idledoom_sim` is imported via pythonpath (see [tool.pytest.ini_options]
# and `uv run` from the sims/ directory).
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-jsonschema>=4.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
files = ["idledoom_sim", "harness.py", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
